# editor

./: Cargo.toml  text.txt
src/: app.rs  app_test.rs  check_error.rs  cursor.rs  editor_action.rs  font.rs  font_renderer.rs  gl_buffer.rs  highlight.rs  main.rs  matrix.rs  offset_of.rs  process_keyboard.rs  program.rs  render.rs  renderer.rs  scroll.rs  shaders.rs  task_executor.rs  text.rs  text.txt  text_test.rs  timer.rs  triangle.frag  undo.rs
src/font/: font.frag  font.rs  font.vert  font_renderer.rs  mod.rs
src/rect/: mod.rs  rect.vert  rect_renderer.rs
