[package]
name = "editor"
version = "0.1.0"
authors = ["Marcin Wydrzyski <wydrzynskimarcin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[target.x86_64-pc-windows-msvc.freetype]
rustc-link-search = ["./freetype"]
rustc-link-lib = ["freetype"]


[dependencies]
gl = "0.11.0"
ropey = "1.0.0"
rusttype = "0.9.1"
image = "0.22.1"
glfw = "0.37.0"
freetype-rs = "0.25.0"