[package]
name = "editor"
version = "0.1.0"
authors = ["Marcin Wydrzyski <wydrzynskimarcin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# [build]
# rustflags = ["-C", "llvm-args=-ffast-math", "-C", "target-cpu=native"]

[dependencies]
gl = "0.11.0"
ropey = "1.0.0"
glfw = "0.37.0"
freetype-rs = "0.25.0"
memchr = "2"